# Obi-wan

./: README.md  docker-compose.yml  go.work  obi-wan.code-workspace  repository.go
darth-vader/: .env.sample  .gitignore  Dockerfile  README.md  go.mod  go.sum
darth-vader/cmd/: server.go
darth-vader/internal/constants/: strings.go
darth-vader/internal/controllers/: controllers.go
darth-vader/internal/middlewares/: auth_middleware.go
database/migrations/: 000001_init.down.sql  000001_init.up.sql
database/queries/: users.sql
kenobi/: .env.sample  Dockerfile  README.md  go.mod  go.sum  sqlc.yaml
kenobi/cmd/: server.go
kenobi/internal/constants/: errors.go  strings.go
kenobi/internal/controllers/: auth_controllers.go  bot_controllers.go  business_controllers.go  controllers.go  user_controllers.go
kenobi/internal/controllers/dtos/: answer_dto.go  business_dto.go  question_dto.go
kenobi/internal/middlewares/: auth_middleware.go
kenobi/internal/models/: answer.go  api_key.go  bot.go  business.go  business_details.go
kenobi/internal/repository/: models.go  repository.go  users.sql.go
kenobi/internal/services/: business_service.go  custom_llama_service.go  mock_bot_service.go  validation_service.go
kenobi/internal/services/chatgpt_service/: chatgpt_client.go  chatgpt_models.go  chatgpt_service.go
kenobi/internal/utils/: controller_utils.go
light-sabers/: README.md  go.mod
light-sabers/utils/: controller_utils.go
skywalker/: pyproject.toml
skywalker/src/: main.py  utils.py
