[tool.poetry]
name = "skywalker"
version = "0.1.0"
description = "api controller to finetune a model"
authors = ["Elijah <elijahahianyo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
openai = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
